# Premium-Calculator

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
installer/custom/: Install-GreatCalc.ps1  Run-Installer.cmd  Uninstall-GreatCalc.ps1
installer/gui-installer/GreatCalcInstaller/: .gitignore  GreatCalcInstaller.csproj  InstallerArguments.cs  InstallerBackend.cs  InstallerForm.cs  Program.cs  app.manifest
scripts/: build-custom-installer.mjs  clean-releases.mjs  clean-web-dist.mjs  collect-releases.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: CalculatorApp.tsx
src/converters/: pluginCatalog.ts  pluginConverterEngine.ts  unitCatalog.ts  unitConverter.ts
src/desktop/: bindings.ts
src/engine/: errors.ts  mathEngine.ts  symbolicEngine.ts
src/format/: numberFormatter.ts
src/hooks/: useAccentSync.ts  useCurrencyAutoRefresh.ts  useKeyboardInput.ts  useLanguageSync.ts  useThemeSync.ts
src/i18n/: languages.ts  uiText.ts
src/persistence/: keys.ts
src/state/: calculatorStore.ts  converterPluginStore.ts  symbolicStore.ts
src/test/: converters.test.ts  edge-cases.test.ts  engine.test.ts  formatter.test.ts  ip-language.test.ts  languages.test.ts  plugin-converters.test.ts  setup.ts  symbolic-engine.test.ts  ui-flow.test.tsx
src/theme/: accentPalette.ts
src/types/: calculator.ts  nerdamer.d.ts
src/utils/: cn.ts
(+19 files in other folders)
